--- a/popup.html
+++ b/popup.html
@@ -263,6 +263,33 @@
         </div>
     </div>
 
+<div class="section" style="margin-top: 15px; padding: 5px; border: none; text-align: center;">
+    <span style="font-size: 0.8em; color: #888;">
+        Версия V<span id="currentVersion">1.0.1</span> | 
+        <button id="checkVersionBtn" style="background: none; border: none; padding: 0; margin: 0; color: #1E90FF; text-decoration: underline; cursor: pointer; font-size: 1em; font-weight: normal;">
+            Проверить последнюю версию
+        </button>
+    </span>
+</div>
+
+<div id="updateModal" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); display: none; justify-content: center; align-items: center; z-index: 2000;">
+    <div style="background: white; padding: 25px; border-radius: 10px; box-shadow: 0 8px 16px rgba(0,0,0,0.2); max-width: 350px; text-align: center;">
+        <h3 id="updateModalHeader" style="margin-top: 0; color: #4CAF50;">✅ У вас последняя версия!</h3>
+        <p id="updateModalText" style="font-size: 1.1em;">Текущая версия: V1.0.1</p>
+        <div id="updateModalActions" style="display: none; flex-direction: column; gap: 10px; margin-top: 20px;">
+            <button id="downloadUpdateBtn" style="padding: 10px; background-color: #1E90FF; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+                Скачать V<span id="newVersionTag"></span>
+            </button>
+            <button id="cancelUpdateModalBtn" style="padding: 10px; background-color: #ccc; color: black; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
+                Отмена
+            </button>
+        </div>
+        <button id="closeUpdateModalBtn" style="padding: 10px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; margin-top: 15px;">
+            Закрыть
+        </button>
+    </div>
+</div>
+
     <script src="popup.js"></script>
 </body>
 </html>
