--- a/popup.html
+++ b/popup.html
@@ -150,6 +150,7 @@
            <div id="walletLiquidBalances" class="wallet-sub-balances">
                 <div id="walletAptLine"></div>
                <div id="walletMeeLine"></div>
+               <div id="walletMegaLine">MEGA: 0.00</div>
            </div>
 
 
@@ -184,18 +185,13 @@
             <button id="unstakeBtn" style="background-color: #DC143C; color: white; width: 120px; margin: 0; flex-shrink: 0;">Забрать $MEE</button>
         </div>
         
-        <div class="section">
-            <label style="font-size: 0.8em; color: #888; display: block;">Контракт $MEE:</label>
-            <div style="display: flex; align-items: center; justify-content: space-between;">
-                <span id="meeContractValue" style="font-size: 0.8em; word-break: break-all;"></span>
-                <button id="copyContractBtn" style="width: auto; padding: 5px 10px; font-size: 0.8em; margin: 0;">Копировать</button>
-            </div>
+        <div class="section" style="padding: 0; border: none; cursor: pointer;" id="gtaBannerBtn">
+            <img src="icons/GTA.gif" alt="Get GTA" style="width: 100%; border-radius: 5px; display: block;">
         </div>
 
         <div class="section" style="margin-top: 5px; padding: 5px; border: none;">
             <div style="display: flex; flex-wrap: wrap; gap: 8px; justify-content: center;">
                 <button id="linkSourceBtn" class="link-button">Исходный код</button>
-                <button id="linkSiteBtn" class="link-button">Сайт</button>
                 <button id="linkGraphBtn" class="link-button">График $MEE</button>
                 <button id="aboutProjectBtn">О проекте</button>
                 <button id="linkSwapEarniumBtn" class="link-button">Обмен $MEE/APT (Panora)</button>
@@ -339,7 +335,7 @@
 
 <div class="section" style="margin-top: 15px; padding: 5px; border: none; text-align: center;">
     <span style="font-size: 0.8em; color: #888;">
-        Версия V<span id="currentVersion">1.0.3</span> | 
+        Версия V<span id="currentVersion">1.0.4</span> | 
         <button id="checkVersionBtn" style="background: none; border: none; padding: 0; margin: 0; color: #1E90FF; text-decoration: underline; cursor: pointer; font-size: 1em; font-weight: normal;">
             Проверить последнюю версию
         </button>
@@ -349,7 +345,7 @@
 <div id="updateModal" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); display: none; justify-content: center; align-items: center; z-index: 2000;">
     <div style="background: white; padding: 25px; border-radius: 10px; box-shadow: 0 8px 16px rgba(0,0,0,0.2); max-width: 350px; text-align: center;">
         <h3 id="updateModalHeader" style="margin-top: 0; color: #4CAF50;">✅ У вас последняя версия!</h3>
-        <p id="updateModalText" style="font-size: 1.1em;">Текущая версия: V1.0.3</p>
+        <p id="updateModalText" style="font-size: 1.1em;">Текущая версия: V1.0.4</p>
         <div id="updateModalActions" style="display: none; flex-direction: column; gap: 10px; margin-top: 20px;">
             <button id="downloadUpdateBtn" style="padding: 10px; background-color: #1E90FF; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">
                 Скачать V<span id="newVersionTag"></span>
@@ -468,6 +464,49 @@
             ">
             ✅ Закрыть
         </button>
+    </div>
+</div>
+
+<div id="gtaModal" class="modal-overlay" style="z-index: 2005; display: none;">
+    <div class="modal" style="text-align: center; border: 2px solid #E91E63; background: #121212; color: white; max-width: 360px; padding: 20px;">
+        <h3 style="color:#E91E63; font-family: 'Arial Black', sans-serif; margin-top: 0;">🚀 MEGA EVENT: GTA 6</h3>
+        
+        <div id="megaTimer" style="background: #1e1e1e; padding: 8px; border-radius: 6px; margin: 10px 0; font-weight: bold; color: #FFD700; border: 1px solid #333;">
+            00д : 00ч : 00м : 00с
+        </div>
+
+        <p style="font-size: 0.9em; margin: 10px 0;">Текущая цена: <span id="dynamicPrice" style="color: #00E5FF; font-weight: bold; font-size: 1.2em;">0.001</span> <b>APT</b></p>
+
+        <div style="position: relative; height: 80px; background: #1a1a1a; border-radius: 4px; margin: 15px 0; border: 1px solid #333; overflow: hidden;">
+            <canvas id="priceChartCanvas" width="320" height="80"></canvas>
+            <div style="position: absolute; top: 2px; left: 5px; font-size: 10px; color: #666;">0.001 APT</div>
+            <div style="position: absolute; top: 2px; right: 5px; font-size: 10px; color: #E91E63;">0.1 APT</div>
+        </div>
+
+        <p style="font-size: 0.8em; color: #aaa; margin-bottom: 20px;">
+            Цена растет каждую секунду! Успей забрать $MEGA до 19 ноября 2026 года.
+        </p>
+
+<div style="font-size: 0.9em; color: #eee; line-height: 1.5; border-left: 3px solid #E91E63; padding-left: 10px;">
+        🔥 Нажмите <span style="background: #E91E63; color: #fff; padding: 2px 6px; border-radius: 4px; font-weight: bold;">ЗАБРАТЬ $MEGA</span>, 
+        мгновенно подключите кошелек <u>Petra</u>, жмите ⚡<b>RUN</b> и подтвердите транзакцию.
+        <br><br>
+        ✨ <span style="color: #00E5FF; font-weight: bold;">Поздравляем!</span> Теперь вы — <u>ранний холдер</u> эксклюзивной монеты <b>$MEGA</b>! 💎
+        <br><br>
+        <span style="font-size: 0.8em; color: #FFA726;">
+            ⚠️ <i>Важно: убедитесь, что на балансе есть немного <b>APT</b> для оплаты газа.</i>
+        </span>
+    </div>
+
+
+        <div style="display: flex; gap: 10px;">
+            <button id="proceedGtaBtn" style="flex-grow: 2; padding: 12px; background: #E91E63; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold;">
+                ЗАБРАТЬ $MEGA
+            </button>
+            <button id="cancelGtaBtn" style="flex-grow: 1; padding: 10px; background: #333; color: white; border: none; border-radius: 8px; cursor: pointer;">
+                Отмена
+            </button>
+        </div>
     </div>
 </div>
 
